style: fixed landing page layout on smaller devices

--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -255,6 +255,9 @@
   .hidden {
     display: none;
   }
+  .table {
+    display: table;
+  }
   .h-fit {
     height: fit-content;
   }
@@ -275,6 +278,9 @@
   }
   .w-full {
     width: 100%;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .cursor-pointer {
     cursor: pointer;
@@ -447,6 +453,10 @@
   .underline {
     text-decoration-line: underline;
   }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
@@ -467,6 +477,11 @@
       }
     }
   }
+  .max-\[778\]\:flex-col {
+    @media (width < 778) {
+      flex-direction: column;
+    }
+  }
   .max-\[1400px\]\:text-xs {
     @media (width < 1400px) {
       font-size: var(--text-xs);
@@ -481,6 +496,11 @@
   .max-\[932px\]\:grid-cols-\[1fr_500px_1fr\] {
     @media (width < 932px) {
       grid-template-columns: 1fr 500px 1fr;
+    }
+  }
+  .max-\[778px\]\:flex-col {
+    @media (width < 778px) {
+      flex-direction: column;
     }
   }
   .max-\[686px\]\:text-xs {
@@ -551,6 +571,11 @@ html, body {
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-ease {
   syntax: "*";
